welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: Missing closing brace `}' assumed here
if (estFaceMur) {recule)
^Program:2: error: ';' expected but ')' found.
if (estFaceMur) {recule)
                       ^