welcome.lessons.welcome.conditions.Conditions.scala.code
if (estFaceMur) {recule)
if (estFaceMur) {recule}
   